# wildfire_assimilation

./: LICENSE  README.md  reference.md  requirement.txt
cae/: __init__.py  model.py  pyproject.toml
cae/tests/: test_model.py
convlstm/: README.md  __init__.py  dataset.py  earlystop.py  model.py  pyproject.toml  tox.ini  train.py  utils.py
convlstm/tests/: test_dataset.py  test_model.py  test_train.py  test_utils.py
notebooks/: Objective_1_Clean.ipynb  Objective_1_Exploratory.ipynb  Objective_2_Clean.ipynb  Objective_2_Exploratory.ipynb  Objective_3_Clean.ipynb  Objective_3_Exploratory.ipynb
other/: conv_vae.py  objective0.py  utils_objective0.py  vit.py  vq_vae.py
